# advent_of_code

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  poetry.lock_mac  pyproject.toml
.github/workflows/: badges.yml
2020/Day1/: day1.py
2020/Day10/: day10.py
2020/Day2/: day2.py
2020/Day3/: day3.py
2020/Day4/: day4.py
2020/Day5/: day5.py
2020/Day6/: day6.py
2020/Day7/: day7.py
2020/Day8/: day8.py
2020/Day9/: day9.py
2021/Day1/: day1.py
2021/Day10/: day10.py
2021/Day11/: day11.py
2021/Day12/: day12.py
2021/Day13/: day13.py
2021/Day14/: day14.py
2021/Day15/: day15.py
2021/Day16/: day16.py
2021/Day2/: day2.py
2021/Day3/: day3.py
2021/Day4/: day4.py
2021/Day5/: day5.py
2021/Day6/: day6.py
2021/Day7/: day7.py
2021/Day8/: day8.py
2021/Day9/: day9.py
2022/Day10/: day10.py  solution_pt2.txt
2022/Day11/: day11.py
2022/Day12/: day12.py
2022/Day3/: day3.py
2022/Day4/: day4.py
2022/Day5/: day5.py
2022/Day6/: day6.py
2022/Day7/: day7.py
2022/Day8/: day8.py
2022/Day9/: day9.py
advent-of-code/2020/Day4/: day4.py
advent-of-code/2021/Day16/: day16.py
advent-of-code/2022/Day12/: day12.py
advent-of-code/2023/Day1/: day1.py
advent-of-code/src/2019/Day1/: day1.py
advent-of-code/src/2019/Day2/: day2.py
advent-of-code/src/2019/Day4/: main.py
advent-of-code/src/2020/Day1/: day1.py
advent-of-code/src/2020/Day2/: day2.py
advent-of-code/src/2021/Day14/: day14.py
advent-of-code/src/2021/Day4/: day4.py
advent-of-code/src/2021/Day6/: day6.py
advent-of-code/src/2022/Day1/: day1.py
advent-of-code/src/2022/Day13/: day13.py
advent-of-code/src/2022/Day2/: day2.py
advent-of-code/src/2023/Day1/: day1.py  main.py  test3.txt
advent-of-code/src/2023/Day10/: main.py
advent-of-code/utils/: get_input.py  tools.py
advent_of_code/utils/: colors.py  get_input.py  tools.py
utils/: tools.py
(+153 files in other folders)
