[tool.poetry]
name = "advent-of-code"
version = "0.0.1"
description = "Advent of Code repo"
authors = ["reycardo <reycardo_95@hotmail.com>"]
readme = "README.md"
packages = [
    {include = "advent-of-code"},
    {include = "utils", from = "advent-of-code"}
]


[tool.poetry.dependencies]
python = "^3.12"
aocd = "^0.1"
browser-cookie3 = "^0.19.1"
mypy = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.mypy]
mypy_path = "advent-of-code"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true