[tool.poetry]
name = "advent-of-code"
version = "0.0.1"
description = "Advent of Code repo"
authors = ["reycardo <reycardo_95@hotmail.com>"]
readme = "README.md"
packages = [
    {include = "advent-of-code"},
    {include = "utils", from = "advent-of-code"}
]


[tool.poetry.dependencies]
python = "^3.12"
aocd = "^0.1"
browser-cookie3 = "^0.19.1"
black = "^23.11.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get_input = 'utils.get_input:main'
