[project]
name = "advent-of-code"
version = "2.0.0"
description = "Advent of Code repo"
authors = [
    {name = "reycardo", email = "reycardo_95@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aocd>=0.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pre-commit>=4.5.0",
    "pulp>=3.3.0",
    "ruff>=0.14.6",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

